1998-08-19  Mark Mitchell  <mark@markmitchell.com>

	* cp-tree.h (ansi_null_node): New variable.
	* decl.c (ansi_null_node): New variable.
	(init_decl_processing): Initialize its type.
	* lex.c (init_parse): Initialize its value.  Use ansi_null_node
	for null_node in non-ANSI mode.
	* typeck.c (build_binary_op_nodefault): Use ansi_null_node in
	place of null_node to avoid spurious errors.
	
1998-08-17  Mark Mitchell  <mark@markmitchell.com>

	* cp-tree.h (enter_scope_of): New function.
	* parse.y (complex_direct_notype_declarator): Use it.
	* semantics.c (enter_scope_of): New function.

1998-08-17  Jason Merrill  <jason@yorick.cygnus.com>

	* decl.c (grokparms): No, here.

	* decl.c (grokdeclarator): Catch parm with pointer to array of
	unknown bound here...
	* method.c (process_overload_item): ...not here.

	* gxxint.texi: Remove obsolete documentation of overloading code.

	* decl.c (finish_enum): Also set TYPE_SIZE_UNIT.
	* class.c (finish_struct_bits): Likewise.

	* tree.c (lvalue_type): Fix for arrays.
	* typeck.c (build_unary_op): Use lvalue_type.
	* call.c (add_function_candidate): Likewise.
	* cvt.c (convert_to_reference): Likewise.

	* decl2.c (lang_decode_option): Ignore -traditional.

	* init.c (build_offset_ref): Don't mess with error_mark_node.
	* lex.c (do_scoped_id): Use cp_error.

	* rtti.c (get_tinfo_fn): Don't mess with the context for now.

1998-08-17  Benjamin Kosnik  <bkoz@loony.cygnus.com>

	* decl.c (grokdeclarator): Allow anonymous types to be cv-qualified.

Mon Aug 17 10:40:18 1998  Jeffrey A Law  (law@cygnus.com)

	* cp-tree.h (set_identifier_local_value): Provide prototype.

	* decl2.c (do_namespace_alias): Remove unused variables `binding'
	and `old'.

Fri Aug 14 16:42:27 1998  Nick Clifton  <nickc@cygnus.com>

	* Makefile.in: Rename BBISON to BISON so that it can be properly
	inherited from the parent makefile.

1998-08-13  Jason Merrill  <jason@yorick.cygnus.com>

	* lang-options.h: Add -finit-priority.