@@ -1,5 +1,11 @@
 1998-08-19  Mark Mitchell  <mark@markmitchell.com>
 
+	* typeck.c (build_binary_op_nodefault): Warn on use of NULL in
+	arithmetic.
+	* except.c (build_throw): Warn when NULL is thrown, even with
+	-ansi.  Use ansi_null_node, rather than integer_zero_node, in the
+	thrown expression.
+	
 	* cp-tree.h (ansi_null_node): New variable.
 	* decl.c (ansi_null_node): New variable.
 	(init_decl_processing): Initialize its type.
@@ -7,7 +13,7 @@
 	for null_node in non-ANSI mode.
 	* typeck.c (build_binary_op_nodefault): Use ansi_null_node in
 	place of null_node to avoid spurious errors.
-	
+
 1998-08-17  Mark Mitchell  <mark@markmitchell.com>
 
 	* cp-tree.h (enter_scope_of): New function.
